@@ -1,5 +1,6 @@
 #include "keys.h"
 #include "platform_impl.h"
+#include "platform_utils.h"
 
 constexpr int KEY_BUFFER_SIZE = 64;
 static Keycode KeyBuffer[KEY_BUFFER_SIZE];
@@ -10,6 +11,20 @@ void add_key_to_buffer(Keycode keycode) {
         return;
     }
     KeyBuffer[KeyBufferCount++] = keycode;
+}
+
+void add_text_to_buffer(const char* text) {
+    while (*text && KeyBufferCount < KEY_BUFFER_SIZE) {
+        unsigned char c = *text;
+
+        if (!is_ascii_character(c)) {
+            text++;
+            continue;
+        }
+
+        KeyBuffer[KeyBufferCount++] = c;
+        text++;
+    }
 }
 
 Keycode get_keypress() {
