@@ -17,6 +17,7 @@ constexpr Keycode KEY_BACKSPACE = 408;
 constexpr int MaxKeycode = 256;
 
 void add_key_to_buffer(Keycode keycode);
+void add_text_to_buffer(const char* text);
 
 Keycode get_keypress();
 void empty_keypress_buffer();
